# ModalSoundGen

./: README.md  Untitled Diagram.drawio  readme.txt  sound_pipeline.drawio  work.sh
IsoStuffer/: CMakeCache.txt  Makefile  cmake_install.cmake
IsoStuffer/src/: 1.tet  Makefile  cmake_install.cmake  isostuffer  isostuffer-gui  main.cpp  ui_IsoStufferFrame.h  ui_Params.h
IsoStuffer/src/geometry/: TriangleMesh.hpp
IsoStuffer/src/io/: TglMeshReader.hpp
IsoStuffer/src/isostuffer-gui_autogen/UYX5XTB5RZ/: qrc_images.cpp
IsoStuffer/src/ui/: moc_IsoStufferCanvas.cpp  moc_IsoStufferCanvas.cpp_parameters  moc_IsoStufferFrame.cpp  moc_IsoStufferFrame.cpp_parameters  moc_ParamsDialog.cpp  moc_ParamsDialog.cpp_parameters
ModalSound/: CMakeCache.txt  Makefile  cmake_install.cmake  compile.sh
ModalSound/src/: Makefile
ModalSound/src/demo/: AudioProducer.cpp  AudioProducer.h  ClickSoundSynth.cpp  cmake_install.cmake
ModalSound/src/modal/: ModalModel.cpp
ModalSound/src/protobuf/: Makefile  cmake_install.cmake  sploosh.pb.h
ModalSound/src/tools/: CMakeCache.txt  CMakeLists.txt  Makefile  extract_matrices.cpp  moc_ModesVisParamsDialog.cpp  moc_ModesVisParamsDialog.cpp_parameters  moc_TetViewerCanvas.cpp  moc_TetViewerFrame.cpp  moc_TetViewerFrame.cpp_parameters  modal_eigen  modal_eigen.cpp
ModalSound/src/tools/tetviewer_autogen/EWIEGA46WW/: qrc_images.cpp
ModalSound/src/tools/tetviewer_autogen/include/: ui_ModesVisParams.h  ui_tetviewer.h
ModalSound/src/utils/: term_msg.h
MyCode/: 1.geo.txt  1.mass.csc  1.stiff.csc  1.tet  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  docmake.sh  main  main.cpp  modal_eigen.cpp  out.txt
MyCode/mesh2mesh/: CMakeLists.txt  Makefile  cmake_install.cmake  mesh2mesh.cpp  mesh2mesh.h
MyCode/src/: cmake_install.cmake
MyCode/src/demo/: Makefile
MyCode/src/libpython/: Makefile  cmake_install.cmake
MyCode/src/tools/: CMakeLists.txt  cmake_install.cmake  moc_TetViewerCanvas.cpp_parameters  modal_eigen.cpp
MyCode/synthesis/: AudioProducer.cpp  AudioProducer.h  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  synthesis.cpp  synthesis.h
MyCode/synthesis/backup/: synthesis.cpp  synthesis.h
MyCode/tet2matrices/: CMakeLists.txt  Makefile  cmake_install.cmake  extract_matrices.cpp  extract_matrices.h  modal_eigen.cpp  modal_eigen.h
voxelizer/: CompFab.cpp  main.cpp  main.cu
voxelizer/data/dragon/: out.binvox  out.index
voxelizer/includes/: CompFab.h
