project(modalsound)
cmake_minimum_required(VERSION 3.0)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
find_package(MKL REQUIRED)
set(MKL_LIBS ${IOMP5_LIBRARY} ${MKL_LIBRARY_RT} ${MKL_LIBRARY_THREAD}  ${MKL_LIBRARY_ILP64} ${MKL_LIBRARY} ${OPENMP_LIB})
FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
find_package(TBB REQUIRED)
include_directories(
	${MKL_INCLUDE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
	${Boost_INCLUDE_DIRS}
)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(main ${DIR_SRCS})
message("MKL_LIBS:${MKL_LIBS}")
TARGET_LINK_LIBRARIES(
	main
	${MKL_LIBS}
	${Boost_LIBRARIES}
	tbb
)
add_subdirectory(demo)
